samples/_failures_safe/1761348403_f4de2e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e80dd316.c: In function ‘tokenize’:
./samples/SAFE/__tmp_e80dd316.c:170:21: error: expected ‘;’ at end of input
  170 |     *token_count = 0
      |                     ^
      |                     ;
./samples/SAFE/__tmp_e80dd316.c:170:5: error: expected declaration or statement at end of input
  170 |     *token_count = 0
      |     ^
